<resources>
    <string name="app_name">MianMianwWallpaper</string>
    <string name="welcome">WelCome</string>
    <string name="prompt_user_name">UserName</string>
    <string name="login">Sign in</string>
    <string name="prompt_password">Password</string>
    <string name="register">register</string>
    <string name="nickname">nickname</string>
    <string name="confirm">confirm</string>
    <string name="home">Home</string>
    <string name="hotnews">HotNews</string>
    <string name="personal">Personal</string>
    <string name="search">Search</string>
    <string name="set_wallpaper">Set is wallpaper</string>
    <string name="set_lock_screen">Set is lockscreen</string>
    <string name="setting">Setting...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
