<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/register"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_margin="16dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        style="@style/TextAppearance.AppCompat.Display2"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/primary_text_light"
        android:layout_marginTop="48dp"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/prompt_user_name"
            android:textColorHint="@android:color/darker_gray"
            />
        </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"
            android:textColorHint="@android:color/darker_gray"
            />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/Base.TextAppearance.AppCompat.Button"
        android:textColor="@android:color/primary_text_light"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />
    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/pb_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        />
</LinearLayout>
